@@ -98,6 +98,9 @@ GNU coreutils NEWS                                    -*- outline -*-
   stat and tail now know about the "sdcardfs" file system on Android.
   stat -f -c%T now reports the file system type, and tail -f uses inotify.
 
+  stat now prints file creation time when supported by the file system,
+  on GNU Linux systems with glibc >= 2.28 and kernel >= 4.11.
+
 
 * Noteworthy changes in release 8.30 (2018-07-01) [stable]
 
